p2/apps/s_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app2
  name: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app2
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        args: ["-text=Hello From the Second Application !"]
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app2
  name: app2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    app: app2
status:
  loadBalancer: {}
