p2/apps/t_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app3
  name: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app3
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        args: ["-text=Hello From the Third Application !!"]
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app3
  name: app3
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    app: app3
status:
  loadBalancer: {}
